# self-iterative-label-refinement

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
scripts/: preprocess.sh  run.sh  train.py
src/constraint_learning_rlhf/: data.py  evaluation.py  losses.py  metrics.py  modeling.py  training.py
src/constraint_learning_rlhf/preprocess/: __init__.py  format_dataset.py
