[project]
name = "self-iterative-refinement"
version = "0.1.0"
description = "Self Iterative Refinement via Robust Unlabeled Learning"
authors = [
    {name = "Hikaru Asano", email = "hikaruasano1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.1.1",
    "transformers==4.45.0",
    "sentencepiece>=0.1.99",
    "hydra-core>=1.3.2",
    "datasets==2.15.0",
    "evaluate>=0.4.1",
    "nltk>=3.8.1",
    "tensorboard>=2.15.1",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "accelerate>=0.26.0",
    "peft==0.4.0",
    "trl==0.4.7",
    "scipy>=1.13.1",
    "tqdm==4.66.1",
    "gcsfs==2023.10.0",
    "numpy<=1.26.4",
    "urllib3==1.26.6",
    "scikit-learn>=1.5.1",
    "jupyterlab>=4.2.4",
    "python-dotenv>=1.0.1",
    "bitsandbytes>=0.44.0",
    "wandb==0.18.3",
    "ruff>=0.14.10",
    "huggingface-hub>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "setuptools==59.5.0",
    "matplotlib>=3.8.2",
    "pytest>=7.4.3",
    "pysen==0.10.1",
    "black==22.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
    "mypy==0.910",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
